--- a/project.config
+++ b/project.config
@@ -1,6 +1,32 @@
-[project]
-	description = Packaging of upstream ovn-octavia-provider
-[access]
-	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group Administrators
+  read = group openstack/ovn-octavia-provider-core
+  owner = group openstack/ovn-octavia-provider-ptl
+  owner = group rdo-superusers
+[access "refs/heads/*"]
+  label-Code-Review = -2..+2 group openstack/ovn-octavia-provider-core
+  label-Code-Review = -2..+2 group openstack/ovn-octavia-provider-ptl
+  label-Code-Review = -2..+2 group rdo-provenpackagers
+  label-Code-Review = -2..+2 group rdo-superusers
+  submit = group openstack/ovn-octavia-provider-ptl
+  submit = group rdo-superusers
+  read = group Registered Users
+  read = group openstack/ovn-octavia-provider-core
+  read = group rdo-provenpackagers
+  abandon = group openstack/ovn-octavia-provider-core
+  label-Verified = -2..+2 group openstack/ovn-octavia-provider-ptl
+  label-Verified = -2..+2 group rdo-superusers
+  label-Workflow = -1..+0 group Registered Users
+  label-Workflow = -1..+1 group openstack/ovn-octavia-provider-core
+  label-Workflow = -1..+1 group openstack/ovn-octavia-provider-ptl
+  label-Workflow = -1..+1 group rdo-provenpackagers
+[access "refs/meta/config"]
+  read = group Registered Users
+  read = group openstack/ovn-octavia-provider-core
+  read = group rdo-provenpackagers
+[receive]
+  requireChangeId = true
+[submit]
+  mergeContent = false
+  action = rebase if necessary
+[project]
+        description = Packaging of upstream ovn-octavia-provider
